--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,24 @@ select {
   gap: 5px;
 }
 
-.form-group input:focus {
+textarea {
+  resize: none;
+  min-height: 80px;
+  max-height: 80px;
+  font-family: "Inter", Arial, sans-serif;
+}
+textarea::placeholder {
+  font-family: "Inter", Arial, sans-serif;
+}
+
+.form-group input:focus,
+select:focus,
+textarea:focus {
   border-color: #068d6d;
   outline: none;
+}
+select option[value=""] {
+  color: #a8a8a8;
 }
 .expiry-date {
   display: flex;
@@ -65,13 +80,6 @@ select {
   align-items: center;
 }
 
-.expiry-date select:focus {
-  border-color: #068d6d;
-  outline: none;
-}
-.expiry-date select option[value=""] {
-  color: #a8a8a8;
-}
 .error {
   color: red;
   margin-top: 0.5rem;
@@ -91,11 +99,11 @@ button {
   border: none;
   border-radius: 39px;
   cursor: pointer;
-  transition: background-color 0.2s ease;
   letter-spacing: 1px;
 }
 
-button.next-btn {
+button.next-btn,
+button.submit {
   background: #068d6d;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   color: #fff;
@@ -112,10 +120,10 @@ button.next-btn:hover {
 }
 
 button.back-btn {
-  background: #fff;
+  background-color: #fff;
   color: #068d6d;
   border: 2px solid #068d6d;
-  transition: background 0.2s, color 0.2s;
+  transition: background-color 0.2s, color 0.2s;
 }
 
 button.back-btn:hover {
@@ -127,20 +135,6 @@ button.back-btn:hover {
   margin-left: auto;
   color: #fff;
 }
-
-/* Review Step */
-.review-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.review-item {
-  display: flex;
-  justify-content: space-between;
-  padding: 0.75rem;
-  background-color: #f8f8f8;
-  border-radius: 0.5rem;
-  font-size: 0.95rem;
-  color: #444;
+.review-section h3 {
+  margin-bottom: 0.5rem;
 }
